# magic_enum

./: .appveyor.yml  .bazelignore  .bazelrc  .bazelversion  .cmake-format  .dockerignore  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE  MODULE.bazel  README.md  SECURITY.md  conanfile.py  install.cmake  magic-enum.bb  meson.build  meson_options.txt  package.xml  test_installed_version.bash
.github/: FUNDING.yml
.github/workflows/: bzlmod-archive.yml  macos.yml  module_test_installed_version.yml  scorecard.yml  ubuntu.yml  ubuntu_test_installed_version.yml  windows.yml
bazel/: copts.bzl
cmake/: magic_enumConfig.cmake.in
cmake/GenPkgConfig/: GenPkgConfig.cmake  ReadMe.md
cmake/GenPkgConfig/buildTimeScripts/: getObjectFilesBaseNames.cmake
doc/: limitations.md  reference.md
example/: BUILD.bazel  CMakeLists.txt  enum_flag_example.cpp  example.cpp  example_containers_array.cpp  example_containers_bitset.cpp  example_containers_set.cpp  example_containers_set_lookup.cpp  example_custom_name.cpp  example_enum_map.cpp  example_module_usage.cpp  example_nonascii_name.cpp  example_switch.cpp
include/: magic_enum.hpp  magic_enum_all.hpp  magic_enum_containers.hpp  magic_enum_flags.hpp  magic_enum_format.hpp  magic_enum_fuse.hpp  magic_enum_iostream.hpp  magic_enum_map.hpp  magic_enum_switch.hpp  magic_enum_utility.hpp
include/magic_enum/: magic_enum.cppm  magic_enum.hpp  magic_enum_all.hpp  magic_enum_containers.hpp  magic_enum_flags.hpp  magic_enum_format.hpp  magic_enum_fuse.hpp  magic_enum_iostream.hpp  magic_enum_switch.hpp  magic_enum_utility.hpp
include/magic_enum/detail/: config.hpp
module/: magic_enum.cppm
test/: .bazelignore  .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  aliases.hpp  magic_enum_test_config.hpp  magic_enum_wchar_t_test_config.hpp  meson.build  stage_package.cmake  test.cpp  test_aliases.cpp  test_containers.cpp  test_flags.cpp  test_helpers.hpp  test_module.cpp  test_module_aliases.cpp  test_module_wchar_t.cpp  test_nonascii.cpp  test_wchar_t.cpp
test/installed_module/: CMakeLists.txt  main.cpp
test/issue231/: CMakeLists.txt  enum.cpp  enum.h  issue231_no_range.cpp  issue231_with_range.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
