licenses(["notice"])

exports_files(["LICENSE"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "magic_enum",
    hdrs = ["include/magic_enum.hpp"],
    strip_include_prefix = "include",
)

cc_binary(
    name = "example",
    srcs = ["example/example.cpp"],
    deps = [":magic_enum"],
    copts = ["-std=c++17"],
)

cc_binary(
    name = "enum_flag_example",
    srcs = ["example/enum_flag_example.cpp"],
    deps = [":magic_enum"],
    copts = ["-std=c++17"],
)

cc_binary(
    name = "example_custom_name",
    srcs = ["example/example_custom_name.cpp"],
    deps = [":magic_enum"],
    copts = ["-std=c++17"],
)

cc_library(
    name = "catch",
    srcs = [],
    hdrs = ["test/3rdparty/Catch2/catch.hpp"],
    strip_include_prefix = "test/3rdparty/Catch2",
)

cc_test(
    name = "test",
    srcs = [
        "test/test.cpp",
    ],
    deps = [":magic_enum", ":catch"],
    copts = ["-std=c++17"],
)
cc_test(
    name = "test_flags",
    srcs = [
        "test/test_flags.cpp",
    ],
    deps = [":magic_enum", ":catch"],
    copts = ["-std=c++17"],
)
