load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "COPTS")

licenses(["notice"])

exports_files(["LICENSE"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "magic_enum",
    hdrs = glob(["include/*.hpp"]),
    copts = COPTS,
    includes = ["include"],
)
