load("@rules_cc//cc:defs.bzl", "cc_test")
load("@magic_enum//bazel:copts.bzl", "COPTS")

# bazel central registry has a catch2 module, but is newer than the one included
# in this repository
cc_library(
    name = "catch2",
    includes = ["3rdparty/Catch2/include"],
    hdrs = ["3rdparty/Catch2/include/catch2/catch.hpp"],
    copts = COPTS,
)

_TESTS = [
    "test",
    "test_flags",
]

[cc_test(
    name = test,
    srcs = ["{}.cpp".format(test)],
    deps = ["@magic_enum", ":catch2"],
    copts = COPTS,
) for test in _TESTS]
